--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
   </head>
   <body>
     <form>
-      <label for='message'>Message</label>
+      <label for='message'>Message (ignores non-text characters)</label>
       <br>
       <input type='text' name='message' id='message'>
       <br><br>
